--- a/several levels/Base.lproj/Main.storyboard
+++ b/several levels/Base.lproj/Main.storyboard
@@ -162,47 +162,13 @@
                         </connections>
                     </tableView>
                     <extendedEdge key="edgesForExtendedLayout" bottom="YES"/>
-                    <toolbarItems>
-                        <barButtonItem style="plain" systemItem="flexibleSpace" id="7DM-fT-wwS"/>
-                        <barButtonItem image="home" id="G9k-7I-PGL">
-                            <color key="tintColor" red="0.73725490199999999" green="0.89411764709999997" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                            <connections>
-                                <action selector="homeButton:" destination="srl-zW-oFF" id="gjQ-35-zGD"/>
-                            </connections>
-                        </barButtonItem>
-                        <barButtonItem style="plain" systemItem="flexibleSpace" id="YJT-4P-mnd"/>
-                        <barButtonItem image="tutorials" id="U9p-w5-Avj">
-                            <color key="tintColor" red="0.73725490196078436" green="0.89411764705882346" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                            <connections>
-                                <action selector="sortTutorials:" destination="srl-zW-oFF" id="VSC-uI-JGj"/>
-                            </connections>
-                        </barButtonItem>
-                        <barButtonItem style="plain" systemItem="flexibleSpace" id="abs-wC-VSb"/>
-                        <barButtonItem image="games" id="zBg-ia-GAJ">
-                            <color key="tintColor" red="0.73725490199999999" green="0.89411764709999997" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                            <connections>
-                                <action selector="sortGames:" destination="srl-zW-oFF" id="IoV-Wj-adt"/>
-                            </connections>
-                        </barButtonItem>
-                        <barButtonItem style="plain" systemItem="flexibleSpace" id="Ow9-P4-KLX"/>
-                        <barButtonItem image="tech" id="l8b-eA-4hl">
-                            <color key="tintColor" red="0.73725490199999999" green="0.89411764709999997" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                            <connections>
-                                <action selector="sortTech:" destination="srl-zW-oFF" id="DDS-E9-a7Y"/>
-                            </connections>
-                        </barButtonItem>
-                        <barButtonItem style="plain" systemItem="flexibleSpace" id="KMZ-Ox-Wv2"/>
-                    </toolbarItems>
+                    <toolbarItems/>
                     <navigationItem key="navigationItem" title="several levels" id="8Zw-ih-PPD">
                         <barButtonItem key="backBarButtonItem" title="Back" id="zXO-yW-qxL"/>
                     </navigationItem>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
-                        <outlet property="homeButtonIcon" destination="G9k-7I-PGL" id="Rr3-2U-1U4"/>
                         <outlet property="navBarTitle" destination="8Zw-ih-PPD" id="pHK-yY-GvM"/>
-                        <outlet property="sortGamesIcon" destination="zBg-ia-GAJ" id="ZY9-IZ-oQt"/>
-                        <outlet property="sortTechIcon" destination="l8b-eA-4hl" id="oq3-jT-wbc"/>
-                        <outlet property="sortTutorialsIcon" destination="U9p-w5-Avj" id="DPi-kA-p3q"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2Vm-x9-wmx" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -296,10 +262,4 @@
             <point key="canvasLocation" x="-98.5" y="493.5"/>
         </scene>
     </scenes>
-    <resources>
-        <image name="games" width="36" height="36"/>
-        <image name="home" width="36" height="36"/>
-        <image name="tech" width="36" height="36"/>
-        <image name="tutorials" width="36" height="36"/>
-    </resources>
 </document>
