--- a/several levels/Base.lproj/LaunchScreen.storyboard
+++ b/several levels/Base.lproj/LaunchScreen.storyboard
@@ -15,14 +15,11 @@
                         <viewControllerLayoutGuide type="bottom" id="xb3-aO-Qok"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="sl" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wsQ-i4-hOP">
-                                <rect key="frame" x="146" y="415" width="209" height="244"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="209" id="cOE-zM-dgQ"/>
-                                </constraints>
+                                <rect key="frame" x="91" y="284" width="209" height="245"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="300"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
@@ -30,16 +27,17 @@
                         </subviews>
                         <color key="backgroundColor" red="0.37427230425533931" green="0.82496779792104802" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="wsQ-i4-hOP" secondAttribute="bottom" constant="8" symbolic="YES" id="fbA-th-GG9"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="wsQ-i4-hOP" secondAttribute="trailing" constant="4" id="hhT-Td-iPv"/>
-                            <constraint firstItem="wsQ-i4-hOP" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="395" id="lvK-0U-3YC"/>
+                            <constraint firstItem="wsQ-i4-hOP" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" constant="75" id="Zk2-Eb-P2n"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="wsQ-i4-hOP" secondAttribute="trailing" constant="4" id="fUn-vL-Stb"/>
+                            <constraint firstItem="wsQ-i4-hOP" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="264" id="uwN-Gf-AMJ"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="wsQ-i4-hOP" secondAttribute="bottom" constant="39" id="wt7-uA-fXN"/>
                         </constraints>
                     </view>
-                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="52.5" y="374.5"/>
+            <point key="canvasLocation" x="52" y="374"/>
         </scene>
     </scenes>
 </document>
