--- a/several levels/Base.lproj/LaunchScreen.storyboard
+++ b/several levels/Base.lproj/LaunchScreen.storyboard
@@ -15,11 +15,11 @@
                         <viewControllerLayoutGuide type="bottom" id="xb3-aO-Qok"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="sl" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wsQ-i4-hOP">
-                                <rect key="frame" x="91" y="284" width="209" height="245"/>
+                                <rect key="frame" x="111" y="233" width="244" height="414"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="300"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
@@ -27,13 +27,13 @@
                         </subviews>
                         <color key="backgroundColor" red="0.37427230425533931" green="0.82496779792104802" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="wsQ-i4-hOP" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" constant="75" id="Zk2-Eb-P2n"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="wsQ-i4-hOP" secondAttribute="trailing" constant="4" id="fUn-vL-Stb"/>
-                            <constraint firstItem="wsQ-i4-hOP" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="264" id="uwN-Gf-AMJ"/>
-                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="wsQ-i4-hOP" secondAttribute="bottom" constant="39" id="wt7-uA-fXN"/>
+                            <constraint firstAttribute="bottom" secondItem="wsQ-i4-hOP" secondAttribute="bottom" constant="20" symbolic="YES" id="5r4-1m-bgj"/>
+                            <constraint firstItem="wsQ-i4-hOP" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="213" id="67J-6i-7GZ"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="wsQ-i4-hOP" secondAttribute="trailing" constant="4" id="Oco-Bo-hYC"/>
+                            <constraint firstItem="wsQ-i4-hOP" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" constant="95" id="zId-kj-5Xx"/>
                         </constraints>
                     </view>
-                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
